<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/username"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/username"

            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/Uusername"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textView3"

            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password"
            android:textSize="30sp"/>


        <EditText
            android:id="@+id/password"

            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textView5"

            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/confirm_password"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/confirmPassword"

            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bartenderSignUp"
            android:text="@string/sign_up"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>